Various small changes

--- a/src/main/resources/org/sola/cs/messages/service/Bundle_pt_BR.properties
+++ b/src/main/resources/org/sola/cs/messages/service/Bundle_pt_BR.properties
@@ -130,6 +130,11 @@ ser_ot064.message=Modelo da se\u00e7\u00e3o '{0}' n\u00e3o foi encontrado nas se
 ser_ot064.type=ERROR
 ser_ot065.message=Percentage can't be 0 or less than 0
 ser_ot065.type=ERROR
+ser_ot079.message = O n\u00famero do identificador fornecido j\u00e1 existe.
+ser_ot079.type = ERROR
+ser_ot080.message = O n\u00famero do identificador manual deve ser inferior a 400.
+ser_ot80.type = ERROR
+
 seradminservice001.message=Nome de usu\u00e1rio "{0}" j\u00e1 existe.
 seradminservice001.type=ERROR
 seradminservice002.message=Falha na extra\u00e7\u00e3o.
