--- a/src/main/resources/org/sola/cs/messages/service/Bundle_pt_BR.properties
+++ b/src/main/resources/org/sola/cs/messages/service/Bundle_pt_BR.properties
@@ -133,7 +133,15 @@ ser_ot065.type=ERROR
 ser_ot079.message = O n\u00famero do identificador fornecido j\u00e1 existe.
 ser_ot079.type = ERROR
 ser_ot080.message = O n\u00famero do identificador manual deve ser inferior a 400.
-ser_ot80.type = ERROR
+ser_ot080.type = ERROR
+ser_ot081.message = A adjac\u00eancia do norte e seu tipo s\u00e3o necess\u00e1rios
+ser_ot081.type = ERROR
+ser_ot082.message = A adjac\u00eancia ao sul e seu tipo s\u00e3o necess\u00e1rios
+ser_ot082.type = ERROR
+ser_ot083.message = A adjac\u00eancia leste e seu tipo s\u00e3o necess\u00e1rios
+ser_ot083.type = ERROR
+ser_ot084.message = A adjac\u00eancia oeste e seu tipo s\u00e3o necess\u00e1rios
+ser_ot084.type = ERROR
 
 seradminservice001.message=Nome de usu\u00e1rio "{0}" j\u00e1 existe.
 seradminservice001.type=ERROR
